--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: Generate Datas
+name: Generate Snake
 
 on:
-  schedule: # execute every 5 hour
-    - cron: "* */3 * * *"
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
   workflow_dispatch:
 
 jobs:
